Update index importanto forja e leatherworking e tailoring.html

--- a/index importanto forja e leatherworking e tailoring.html
+++ b/index importanto forja e leatherworking e tailoring.html
@@ -54,7 +54,7 @@
         <div id="results"></div>
     </div>
 
-     <script src="itensimport.js"></script>
+     <script src="./itensimport.js"></script>
 
     <script>
 
@@ -281,4 +281,5 @@
         }
     </script>
 </body>
+
 </html>
