--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
         .xp-highlight { color: #bb86fc; font-weight: bold; }
         .time-highlight { color: #03dac6; font-weight: bold; }
+
+        /* Estilo para a linha de crédito */
+        .credits {
+            text-align: center;
+            margin-top: 20px;
+            font-size: 0.8em;
+            color: #888;
+        }
     </style>
 </head>
 <body>
@@ -52,6 +60,11 @@
         </div>
         <button onclick="calculate()">Calculate</button>
         <div id="results"></div>
+
+        <div class="credits">
+            <p>Discord: darkdragonx3985</p>
+        </div>
+        
     </div>
 
      <script src="./itensimport.js"></script>
@@ -66,11 +79,9 @@
             0, 84, 192, 324, 480, 645, 820, 1005, 1200, 1407, 1735, 2082, 2449, 2838, 3249, 3684, 4144, 4631, 5146, 5691, 6460, 7281, 8160, 9101, 10109, 11191, 12353, 13603, 14949, 16400, 18455, 20675, 23076, 25675, 28492, 31549, 34870, 38482, 42415, 46702, 52583, 58662, 64933, 71390, 78026, 84833, 91802, 98923, 106186, 114398, 123502, 132734, 142077, 151515, 161029, 170602, 180216, 189852, 199491, 209115, 220417, 232945, 246859, 262341, 279598, 298871, 320434, 344603, 371744, 402278, 441971, 486789, 537487, 594941, 660170, 734360, 818896, 915396, 1025752, 1152182, 1316749, 1492835, 1681248, 1882849, 2098562, 2329375, 2576345, 2840603, 3123359, 3425908, 3749636, 4269287, 4827911, 5428432, 6073992, 6767969, 7513995, 8315973, 9178099
         ];
         
-        // --- FUNÇÃO ADICIONADA ---
         function formatNumber(number) {
             return number.toLocaleString('pt-BR');
         }
-        // --------------------------
 
         function getLevelFromXp(xp) {
             let currentLevel = 1;
