--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             font-size: 0.8em;
             color: #888;
         }
+
+        /* Estilo para o botão de doação */
+        .paypal-donate-btn {
+            max-width: 150px;
+            margin-top: 15px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
     </style>
 </head>
 <body>
@@ -65,6 +74,14 @@
             <p>Discord: darkdragonx3985</p>
         </div>
         
+        <form class="paypal-donate-btn" action="https://www.paypal.com/donate" method="post" target="_top">
+        <input type="hidden" name="business" value="JQSHTGU3WZA5Y" />
+        <input type="hidden" name="no_recurring" value="0" />
+        <input type="hidden" name="currency_code" value="BRL" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_BR/i/scr/pixel.gif" width="1" height="1" />
+        </form>
+
     </div>
 
      <script src="./itensimport.js"></script>
