--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
         </div>
         <div class="form-group">
             <label for="currentXp">Current XP:</label>
-            <input type="number" id="currentXp" value="0" oninput="updateItemList()">
+            <input type="number" id="currentXp" value="0" min="0" oninput="updateItemList()">
         </div>
         <div class="form-group">
             <label for="targetLvl">Level Goal:</label>
-            <input type="number" id="targetLvl" value="1">
+            <input type="number" id="targetLvl" value="1" min="1">
         </div>
         <div class="form-group">
             <label for="efficiency">Efficiency (%):</label>
