--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     color:#e6eef8;
     padding:18px;
     -webkit-font-smoothing:antialiased;
+    text-align: center;
   }
 
   .wrap{
@@ -36,6 +37,7 @@
     padding:18px;
     box-shadow: 0 6px 30px rgba(2,6,23,0.6);
     border:1px solid rgba(255,255,255,0.03);
+    text-align: center; /* CENTRALIZA O CONTEÚDO DENTRO DO CARD */
   }
 
   header.card h1{
@@ -55,16 +57,17 @@
     color: #e6eef8;
     font-size:0.95rem;
     outline:none;
+    text-align: center; /* CENTRALIZA O TEXTO DIGITADO NO CAMPO */
   }
   select option {
-    color: var(--panel); /* Define a cor do texto para escuro */
-    background: var(--bg); /* Define um fundo claro para garantir a legibilidade */
+    color: var(--panel);
+    background: var(--bg);
   }
   
-  /* Estilo para o placeholder */
   input::placeholder {
     color: var(--muted);
     opacity: 0.6;
+    text-align: center; /* CENTRALIZA O TEXTO DO PLACEHOLDER */
   }
 
   .form-row{margin-bottom:12px}
@@ -93,6 +96,7 @@
     padding:14px;
     border-radius:10px;
     border:1px solid rgba(255,255,255,0.02);
+    /* A PROPRIEDADE text-align: left; FOI REMOVIDA AQUI PARA CENTRALIZAR O TEXTO */
   }
   .result-block h3{margin:0 0 8px 0;font-size:1rem}
   .result-block p{margin:6px 0;color:#dbeafe}
@@ -104,7 +108,6 @@
     gap:10px;
   }
 
-  /* specific layout for efficiency + item: smaller efficiency, larger item */
   .grid-two--compact{
     grid-template-columns: 0.55fr 1.45fr;
     gap:10px;
@@ -118,7 +121,7 @@
 
   .small-muted{color:var(--muted);font-size:0.85rem}
   .pill{display:inline-block;background:var(--glass);padding:6px 10px;border-radius:999px;font-size:0.85rem}
-  .donate-wrap{text-align:center;margin-top:8px;} /* centers donate button */
+  .donate-wrap{text-align:center;margin-top:8px;}
 </style>
 </head>
 <body>
